ccache news
===========

ccache 3.4.2
------------
Release date: unknown

Bug fixes
~~~~~~~~~

- Correctly hash preprocessed headers located in a ``.gch directory''.
  Previously, ccache would not pick up changes to such precompiled headers,
  risking false positive cache hits.

- Fixed build failure when using the bundled zlib sources.

- ccache 3.3.5 added a workaround for not triggering Clang errors when a
  precompiled header's dependency has an updated timestamp (but identical
  content). That workaround is now only applied when the compiler is Clang.

- Made it possible to perform out-of-source builds in dev mode again.


ccache 3.4.1
------------
Release date: 2018-02-11

Bug fixes
~~~~~~~~~

- Fixed printing of version number in `ccache --version`.


ccache 3.4
----------
Release date: 2018-02-11

New features and enhancements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- The compiler option form `--sysroot arg` is now handled like the documented
  `--sysroot=arg` form.

- Added support for caching `.su` files generated by GCC flag `-fstack-usage`.

- ccache should now work with distcc's ``pump'' wrapper.

- The optional unifier is no longer disabled when the direct mode is enabled.

- Added support for NVCC compiler options `--compiler-bindir/-ccbin`,
  `--output-directory/-odir` and `--libdevice-directory/-ldir`.

- Boolean environment variable settings no longer accept the following
  (case-insensitive) values: `0`, `false`, `disable` and `no`. All other values
  are accepted and taken to mean ``true''. This is to stop users from setting
  e.g. `CCACHE_DISABLE=0` and then expect the cache to be used.

- Improved support for `run_second_cpp = false`: If combined with passing
  `-fdirectives-only` (GCC) or `frewrite-includes` (Clang) to the compiler,
  diagnostics warnings and similar will be correct.

- An implicit `-MQ` is now passed to the preprocessor only if the object file
  extension is non-standard. This should make it easier to use EDG-based